--- a/消息队列.md
+++ b/消息队列.md
@@ -24,7 +24,7 @@
 
 ## 发布/订阅
 
-消息生产者向频道发送一个消息之后，多个消费者可以从该频道订阅到这条消息并消费。
+消息生产者向频道发送一个消息之后， 。
 
 <div align="center"> <img src="pics/1b718cd5-7b1e-496c-9133-2bfd12bb5f89.jpg" width="600px"/> </div><br>
 
