--- a/排序算法.md
+++ b/排序算法.md
@@ -738,7 +738,7 @@ public T delMax() {
 
 ### 5. 堆排序
 
-把最大元素和当前堆中数组的最后一个元素交换位置，并且不删除它，那么就可以得到一个从尾到头的递减序列，从正向来看就是一个递增序列，这就是堆排序。
+把最大元素和当前堆中数组的最后一个元素交换位置，并且不删除它，那么就可以得到一个从尾到头的递减序列，从正向来看就是一个递增序列，这就是堆排序。（？不太懂）
 
 #### 5.1 构建堆
 
